{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 16,
  "lineage": "6ecf450b-4526-a297-9048-abc51e164caf",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0664c911b424d5cae",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-06944f39415388fc6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06944f39415388fc6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0aef07d3e5c5e3209",
            "private_dns": "ip-10-0-0-220.eu-west-1.compute.internal",
            "private_ip": "10.0.0.220",
            "public_ip": "34.245.154.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-059242008d1fe55ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fa9ea0a96f00488",
            "tags": {
              "Name": "app-sami"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e64a384a15b1f97f"
            ]
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app",
            "module.app.aws_subnet.app",
            "module.db.aws_instance.db",
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-012830ca5836fcce2",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0a4ba1d2f4f28fd9b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a4ba1d2f4f28fd9b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0dfef7e2b1abdbb91",
            "private_dns": "ip-10-0-1-188.eu-west-1.compute.internal",
            "private_ip": "10.0.1.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09caa5847cf98d7ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c64fa4aa7b3dd6fd",
            "tags": {
              "Name": "app-sami-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ca9745ce7e02c167"
            ]
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app",
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05b98cae51e6c0420",
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-sami"
            },
            "vpc_id": "vpc-0a1a76a67dc3e4e3e"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-06aa95654de6de57f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-04fa9ea0a96f00488"
            ],
            "tags": {
              "Name": "app-sami"
            },
            "vpc_id": "vpc-0a1a76a67dc3e4e3e"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              }
            ],
            "id": "acl-09264cc512fd23612",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0c64fa4aa7b3dd6fd"
            ],
            "tags": {
              "Name": "app-sami-db"
            },
            "vpc_id": "vpc-0a1a76a67dc3e4e3e"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_subnet.app",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00d3ad64ea89bc05a",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b98cae51e6c0420",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-sami-public"
            },
            "vpc_id": "vpc-0a1a76a67dc3e4e3e"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f30b7eded3087fcf",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-sami-db-private"
            },
            "vpc_id": "vpc-0a1a76a67dc3e4e3e"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b709827aec37332",
            "route_table_id": "rtb-00d3ad64ea89bc05a",
            "subnet_id": "subnet-04fa9ea0a96f00488"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app",
            "module.app.aws_route_table.app",
            "module.app.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0651877790dee257d",
            "route_table_id": "rtb-0f30b7eded3087fcf",
            "subnet_id": "subnet-0c64fa4aa7b3dd6fd"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.db.aws_route_table.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0e64a384a15b1f97f",
            "description": "app-sami access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e64a384a15b1f97f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-sami",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "app-sami"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1a76a67dc3e4e3e"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0ca9745ce7e02c167",
            "description": "app-sami db access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca9745ce7e02c167",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e64a384a15b1f97f"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "app-sami-db",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sami-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1a76a67dc3e4e3e"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-04fa9ea0a96f00488",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-04fa9ea0a96f00488",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "name": "app-sami"
            },
            "vpc_id": "vpc-0a1a76a67dc3e4e3e"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0c64fa4aa7b3dd6fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c64fa4aa7b3dd6fd",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-sami-db"
            },
            "vpc_id": "vpc-0a1a76a67dc3e4e3e"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0a1a76a67dc3e4e3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-062036c882d97e965",
            "default_route_table_id": "rtb-021a673fcf1bb62cb",
            "default_security_group_id": "sg-0d772bf21694b5101",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a1a76a67dc3e4e3e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-021a673fcf1bb62cb",
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-sami"
            }
          }
        }
      ]
    }
  ]
}